2011-06-09  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* child_info.h (CURR_CHILD_INFO_MAGIC): Reset.
	(child_info::old_title): Delete.
	(child_info::~child_info_spawn): Remove recording of old_title.
	* dcrt0.cc (title_buf): Delete.
	(child_info_spawn::handle_spawn): Remove recording of old_title.
	(dll_crt0_1): Get rid of all title handling.
	(do_exit): Ditto.
	* environ.cc (known): Delete strip_title and title.
	* fhandler_console.cc (fhandler_console::write): Remove recording of
	old_title.
	* globals.cc (exit_states): Remove ES_TITLE.
	(display_title): Delete.
	(strip_title_path): Delete.
	(old_title): Delete.
	* spawn.cc (spawn_guts): Remove old_title accommodation.

2011-06-09  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* environ.cc (envcache): Delete.
	(known): Remove envcache.
	(getwinenv): Don't honor envcache setting.

2011-06-09  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* environ.c: Move code earlier to allow:
	(_addenv): Call parse_options() when CYGWIN environment variable is
	being changed.
	(parse_options): Change parameter to 'const'.

2011-06-08  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* environ.cc (tty_is_gone): Add missing space to message.

2011-06-08  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* environ.cc (settings::set_process_state): Delete.
	(tty_is_gone): New function.
	(known): Change "tty" to call tty_is_gone().  Remove unneeded '&' from
	beginning of function address.
	(parse_options): Remove set_process_state handling.
	* shared_info.h (CURR_USER_MAGIC): Reset.
	(user_info::warned_notty): New member.

2011-06-07  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* fhandler_console.cc (fhandler_console::open_shared_console):
	Semi-revert to using fixed location for console stuff.
	* shared.cc (offsets): Ditto.  Comment.
	* shared_info (shared_locations): Re-add SH_SHARED_CONSOLE.

2011-06-05  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* fhandler_disk_file.cc (fhandler_disk_file::pread): Reset windows file